Backend improvements: Refactored controllers, updated service logic, revised repository methods, and improved test coverage